# fleet

./: .gitignore  Makefile  README.md  justfile  pyproject.toml
.beads/: interactions.jsonl  issues.jsonl  metadata.json
.playwright-mcp/: page-2026-06-10T01-39-26-689Z.yml
src/fleet/: __main__.py  ask_human_db.py  cli.py  coder.py  config.py  daemon.py  failures.py  logging.py  queue.py  rate_gauge.py  redact.py  runner.py  schemas.py  supervisor.py  supervisor_spawn.py  telegram.py
tests/: conftest.py  test_ask_human_server.py  test_ask_human_store.py  test_bd_cwd_flag.py  test_cli.py  test_cli_config.py  test_coder_agy.py  test_coder_claude.py  test_coder_claude_settings.py  test_config.py  test_daemon.py  test_docs.py  test_events.py  test_failures.py  test_logging.py  test_queue.py  test_rate_gauge.py  test_runner.py  test_supervisor_failures.py  test_supervisor_status_log.py  test_telegram_answers.py
tests/cli/: test_cli.py  test_cli_ask_human.py  test_cli_config.py  test_cli_telegram.py
tests/coders/: test_coder_agy.py  test_coder_claude.py  test_coder_claude_settings.py  test_coder_codex.py  test_coder_opencode.py
tests/fixtures/: claude_stream_basic.jsonl  claude_stream_rate_limit_info.jsonl  claude_stream_rate_limit_rejected.jsonl  claude_stream_rate_limit_utilization.jsonl  claude_stream_rate_limit_weekly.jsonl  claude_stream_session.jsonl  expected_settings.json  stream_clean_exit.jsonl  stream_rate_limit_rejected.jsonl
tests/integration/: conftest.py  test_atomic_claim.py  test_context_pressure.py  test_dynamic_config.py  test_failure_retry.py  (+6 more)
(+102 files in other folders)
