[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fleet"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "structlog>=24",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "websockets>=12",
    "watchfiles>=0.21",
    "mcp>=1.0.0",
]

[project.scripts]
fleet = "fleet.cli:app"

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["fleet*"]

[tool.setuptools.package-data]
fleet = ["templates/*", "coders/hooks/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]
